--- a/Xpress.Web/Views/Dispatchers/Index.cshtml
+++ b/Xpress.Web/Views/Dispatchers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Xpress.Web.Data.Entities.Users.Employee>
+﻿@model IEnumerable<Xpress.Web.Data.Entities.Users.Dispatcher>
 
 @{
     ViewData["Title"] = "Index";
