--- a/Xpress.Web/Views/Dispatchers/Create.cshtml
+++ b/Xpress.Web/Views/Dispatchers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Xpress.Web.Data.Entities.Users.Employee
+﻿@model Xpress.Web.Data.Entities.Users.Dispatcher
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Employee</h4>
+<h4>Dispatcher</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
