--- a/Xpress.Web/Views/Dispatchers/Delete.cshtml
+++ b/Xpress.Web/Views/Dispatchers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Xpress.Web.Data.Entities.Users.Employee
+﻿@model Xpress.Web.Data.Entities.Users.Dispatcher
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Employee</h4>
+    <h4>Dispatcher</h4>
     <hr />
     <dl class="row">
     </dl>
