--- a/Xpress.Web/Views/Dispatchers/Details.cshtml
+++ b/Xpress.Web/Views/Dispatchers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Xpress.Web.Data.Entities.Users.Employee
+﻿@model Xpress.Web.Data.Entities.Users.Dispatcher
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Employee</h4>
+    <h4>Dispatcher</h4>
     <hr />
     <dl class="row">
     </dl>
