--- a/Xpress.Web/Views/States/Edit.cshtml
+++ b/Xpress.Web/Views/States/Edit.cshtml
@@ -16,6 +16,8 @@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
+                <label asp-for="Country" class="control-label"></label>
+                <input asp-for="Country.Name" class="form-control" disabled />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
